Adding charts api
